B - todo ticket get and update